Für Aufgabe 12 Verbesserte Issues